--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "sourceMap": true, 
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "incremental": true,
   },
   "include": [
     "src"
-  ]
+  ],
+  "exclude": ["node_modules", "build"]
 }
